--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -15,10 +15,10 @@
 
 /* Jekyll Bootstrap Colors */
 h1, h2, h3, h4 {
-  color: #f22430;
+  color: #292c2e;
 }
 #footer {
-  background-color: #fdcd60;
+  background-color: #daf3ef;
 }
 
 
@@ -26,7 +26,7 @@ h1, h2, h3, h4 {
 /* posts index */
 .post > h3.title {
   position: relative;
-  padding-top: 10px; }
+  padding-top: 12px; }
 
 .post > h3.title span.date {
   position: absolute;
