--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -33,12 +33,12 @@ h1, h2, h3, h4 {
   right: 0;
   font-size: 1.2em; }
  
- .post > body {
+ .post > p {
   font-size: 18px；
  }
 
 .post > .more {
-  margin: 11px 0;
+  margin: 10px 0;
   text-align: left; }
 
 /* post-full*/
