--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4 {
   color: #292c2e;
 }
 p {
-  font-size: 18px；
+  font-size: 200%;
  }
 #footer {
   background-color: rgb(224, 243, 248);
