--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -20,6 +20,11 @@ h1, h2, h3, h4 {
 p {
   font-size: 120%;
  }
+ 
+ img {
+	width: 60%；
+ }
+
 #footer {
   background-color: rgb(224, 243, 248);
 }
