--- a/src/styl/_variables.styl
+++ b/src/styl/_variables.styl
@@ -1,13 +1,14 @@
 // COLORS
-main = #5d4d7a;
-mainHover = rgba(135, 116, 169, 0.42);
-hover = darken(main, 50%)
-mainLight = #AB67AB
+//main = #5d4d7a;
+main = #c1cdc1;	
+mainHover = #C2C2C2;
+mainLight = #3B3B3B
+hover = darken(main, 80%)
 sec  = #FFFFFF
-lightGray = #F2F2F2
+lightGray = #C2C2C2
 texts = #333333
-colorcode = #615576
-blackBase =  #2f2f33
-neotree = #2f2f33
+colorcode = #C2C2C2
+blackBase =  #c1cdc1
+neotree = #c1cdc1
 // Resolution
 cut = 37.5rem
