--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -21,9 +21,8 @@
     {% assign filename = page.url | replace_first: '/', '' | replace: '/', '-'  | replace: '.html', '.md' %}
     <ul>
       <li><span>1</span></li>
-      <li><span> {{page.url}}</span></li>
-      <li><span>⌘ blogspace λ </span></li>
-      <li><span>* Menu</span></li>
+      <li><span>{{page.url}}</span></li>
+      <li><span>Menu</span></li>
     </ul>
 
     <ul>
