--- a/src/styl/_menu.styl
+++ b/src/styl/_menu.styl
@@ -57,8 +57,8 @@ aside
         margin 0
         padding 0
     #topmenu
-        background-color main
-        border 2px solid main
+        background-color transparent
+        border 2px solid #c2c2c2
         cf()
         ul
             col(1.3/2)
@@ -70,18 +70,28 @@ aside
                 text-align right
                 li
                     &:first-child
-                        background transparent
+                        background mainLight
                         span
-                            background transparent
+                            background mainLight
                             border-radius 0
                             color white
                             width 45px
                     &:nth-child(2)
                         padding-left 20px
                         padding-right 20px
+                        background mainLight
+                        span
+                            border-radius 0
+                            color white
+                            width 45px
                     &:nth-child(3)
                         margin-right -10px
                         padding-left 10px
+                        span
+                            background transparent
+                            border-radius 0
+                            color white
+                            width 45px
                 +above(1000px)
                     display block                            
             li
@@ -91,16 +101,19 @@ aside
                 display inline-block
                 // margin-left -5px
                 &:first-child
-                    background #EFB102
+                    background mainLight
                     padding 4px 10px 4px 20px
                     margin-left -10px
                     span
-                        border-radius 100%
-                        size(20, 20)
                         text-align center
-                        background-color black
-                        color #EFB102
+                        color #FFFFFF
                         font-weight 300
+                &:nth-child(2)
+                    background mainLight
+                    padding-right 30px
+                    padding-left 30px
+                    span
+                        color white
                 &:nth-child(3)
                     background mainLight
                     padding-right 30px
@@ -113,7 +126,7 @@ aside
                     mainFont(800)
                     font-size rem(13px)
                     color mainLight
-                &:nth-child(3), 
+                &:nth-child(2), 
                 &:nth-child(4)
                     +below(cut)
                         display none
@@ -132,7 +145,7 @@ aside
                 cursor pointer
                 text-decoration none
                 mainFont(300)
-                color #b3b3b1
+                color #FFFFFF
                 &:hover
                     background mainHover
     &.slide
