--- a/src/styl/_postlist.styl
+++ b/src/styl/_postlist.styl
@@ -23,7 +23,7 @@
         margin rem(10px) 0
         &:before
             content ""
-            width 100px
+            width 60px
             height 4px
             position absolute
             bottom 0
@@ -46,7 +46,7 @@
         .date
             color main
         .post-title
-            color #c7b288
+            color #FFFFFF
             position relative
             padding 0
             font-size rem(16px)
