--- a/src/styl/_variables.styl
+++ b/src/styl/_variables.styl
@@ -1,14 +1,14 @@
 // COLORS
 //main = #5d4d7a;
-main = #c1cdc1;	
-mainHover = #C2C2C2;
-mainLight = #3B3B3B
+main = #93cdc7;	
+mainHover = #FFFFFF;
+mainLight = rgb(3,16,37)
 hover = darken(main, 80%)
 sec  = #FFFFFF
-lightGray = #C2C2C2
-texts = #333333
+lightGray = #FFFFFF
+texts = rgb(3,16,37)
 colorcode = #C2C2C2
-blackBase =  #c1cdc1
-neotree = #c1cdc1
+blackBase =  rgb(3,16,37)
+neotree = #1cd8d2
 // Resolution
 cut = 37.5rem
