--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -22,14 +22,10 @@
     <ul>
       <li><span>1</span></li>
       <li><span>{{page.url}}</span></li>
-      <li><span>Menu</span></li>
+      <li><span>Blog</span></li>
+      <li><span>Terminal</span></li>
     </ul>
 
-    <ul>
-      <li><span>utf-8</span></li>
-      <li><span>web</span></li>
-      <li><span>.html</span></li>
-    </ul>
   </div>
 
   <nav id="navigation" role="navigation">
