--- a/src/styl/_menu.styl
+++ b/src/styl/_menu.styl
@@ -57,43 +57,13 @@ aside
         margin 0
         padding 0
     #topmenu
-        background-color transparent
-        border 2px solid #c2c2c2
+        background-color main
+        border 2px solid main
         cf()
         ul
             col(1.3/2)
             +below(1000px)
-                col(2/2)
-            &:nth-child(2)
-                col(.7/2)
-                display none
-                text-align right
-                li
-                    &:first-child
-                        background mainLight
-                        span
-                            background mainLight
-                            border-radius 0
-                            color white
-                            width 45px
-                    &:nth-child(2)
-                        padding-left 20px
-                        padding-right 20px
-                        background mainLight
-                        span
-                            border-radius 0
-                            color white
-                            width 45px
-                    &:nth-child(3)
-                        margin-right -10px
-                        padding-left 10px
-                        span
-                            background transparent
-                            border-radius 0
-                            color white
-                            width 45px
-                +above(1000px)
-                    display block                            
+                col(2/2)                         
             li
                 transform skewx(-20deg)
                 padding 3px 4px 6px 4px
@@ -101,18 +71,13 @@ aside
                 display inline-block
                 // margin-left -5px
                 &:first-child
-                    background mainLight
+                    background blackBase
                     padding 4px 10px 4px 20px
                     margin-left -10px
                     span
+                        border-radius 100%
+                        size(20, 20)
                         text-align center
-                        color #FFFFFF
-                        font-weight 300
-                &:nth-child(2)
-                    background mainLight
-                    padding-right 30px
-                    padding-left 30px
-                    span
                         color white
                 &:nth-child(3)
                     background mainLight
@@ -125,9 +90,12 @@ aside
                     display block
                     mainFont(800)
                     font-size rem(13px)
-                    color mainLight
-                &:nth-child(2), 
+                    color white
+                    
+                &:nth-child(2),
                 &:nth-child(4)
+                    span
+                        color white
                     +below(cut)
                         display none
     nav
@@ -137,7 +105,7 @@ aside
             margin-right 80px
             // clear both
             .counter-menu
-                color mainLight
+                color white
                 font-weight 800
                 margin-right 4px
             a
@@ -145,7 +113,7 @@ aside
                 cursor pointer
                 text-decoration none
                 mainFont(300)
-                color #FFFFFF
+                color rgb(218, 243, 239)
                 &:hover
                     background mainHover
     &.slide
