--- a/_includes/tree-posts.html
+++ b/_includes/tree-posts.html
@@ -7,7 +7,7 @@
     <article role="article" class="post-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
         <div class="content">
             <a title="Open the post" href="{{ post.url | prepend: site.baseurl }}">
-                <h4 class="post-title" itemprop="name">{{ post.title | replace: '-', ' '}}</h4>
+                <h4 class="post-title" itemprop="name">{{ post.title | replace: ' ', '-'}}</h4>
             </a>
         </div>
     </article>
