--- a/src/styl/_variables.styl
+++ b/src/styl/_variables.styl
@@ -1,6 +1,5 @@
 // COLORS
-//main = #5d4d7a;
-main = #93cdc7;	
+main = #93cdc7;
 mainHover = #FFFFFF;
 mainLight = rgb(3,16,37)
 hover = darken(main, 80%)
@@ -9,6 +8,7 @@ lightGray = #FFFFFF
 texts = rgb(3,16,37)
 colorcode = #C2C2C2
 blackBase =  rgb(3,16,37)
-neotree = #1cd8d2
+//neotree = #1cd8d2
+neotree = #93cdc7
 // Resolution
 cut = 37.5rem
